test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-unmanaged-from-oknil-shared.good
init-field-arg-nonnil-unmanaged-from-oknil-shared.chpl:9: In initializer:
init-field-arg-nonnil-unmanaged-from-oknil-shared.chpl:10: error: cannot initialize field MyRecord.lhs of non-nilable type 'unmanaged MyClass' from a nilable 'shared MyClass?'
  init-field-arg-nonnil-unmanaged-from-oknil-shared.chpl:14: called as MyRecord.init(rhs: shared MyClass?)
